# supabase-ssh-rs

./: .gitignore  README.md
.github/workflows/: rust-ci.yml
apps/ssh/: CHANGELOG.md
assets/: README.md  capture.txt  gen_demo.py
crates/supabase-ssh/: Cargo.toml  README.md
crates/supabase-ssh/examples/: capture_demo.rs
crates/supabase-ssh/src/: bash.rs  cache.rs  lib.rs  line_editor.rs  main.rs  session.rs  ssh.rs
crates/supabase-ssh/tests/: e2e.rs  integration.rs  security.rs
